--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+target/generated-sources/
+target/generated-test-sources/
+
+# Intellij
+*.iml
+*.ipr
+*.iws
+.idea
+out/
+gen/
